--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ node_modules/
 /website/tree/migratedeco.js
 /website/tree/old.js
 website/tree/assets/images/deco/deco738632.webp
+/website/webtile/
